--- a/vite-project/.gitignore
+++ b/vite-project/.gitignore
@@ -22,3 +22,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# dependencies
+/node_modules
+
+# env files
+.env
+.env.local
+.env.*.local
+
+# build outputs
+/build
+/dist
